lib/queue-msg-macro/tests/unnamed-struct-multiple-types.stderr
error: only newtype structs are supported
 --> tests/unnamed-struct-multiple-types.rs:4:15
  |
4 | struct Unnamed(String, u16);
  |               ^^^^^^^^^^^^^
